# Pool3D

./: Cargo.toml  Pool3D.code-workspace
assets/Pool/: Bande1.glb  Bande2.glb  Bande3.glb  Bande4.glb  Bande5.glb  Bande6.glb  Banden2.glb  Basket_1.glb  Basket_2.glb  Basket_3.glb  Basket_4.glb  Basket_5.glb  Basket_6.glb  PoolBalls32.glb  PoolHall3.gltf  PoolTable35.glb  Queue_3.glb
assets/Pool/old/: PoolHall1.gltf
src/: VSCode.code-workspace  lib.rs  main.rs
