[package]
name = "pool3_d"
version = "0.1.0"
authors = ["Joachim Behre", "<jhbpuebla@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rapier3d = { version = "0.17.2", features = [ "simd-stable" ] }
three-d = { version = "0.15.0", features=["egui-gui"] }
three-d-asset = { version = "0.5.0", features = ["hdr", "gltf", "obj", "vol", "pcd", "png", "jpeg", "http", "data-url"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }

