[package]
name = "Pool3D"
version = "0.1.0"
authors = ["Joachim Behre", "<jhbpuebla@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
#rapier3d = { version = "0.17.2", features = [ "simd-stable" ] }
rapier3d = { git = "https://github.com/dimforge/rapier", features = [ "simd-stable" ] }
three-d = { git = "https://github.com/asny/three-d", features=["egui-gui"] }
three-d-asset = { git = "https://github.com/asny/three-d-asset", features = ["hdr", "gltf", "obj", "vol", "pcd", "png", "jpeg", "http", "data-url"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }

